--- a/index.html
+++ b/index.html
@@ -55,15 +55,15 @@
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" required>                
             </div>
-            <div class="divInfo">
+            <div class="divInfo" id="divAdresse">
                 <label for="adressePostal">Adresse Postal</label>
                 <input type="text" id="adressePostal" name="adressePostal" required>                
             </div>
-            <div class="divInfo" id="codePostal">
+            <div class="divInfo" id="divCodePostal">
                 <label for="codePostal">Code Postal</label>
                 <input type="number" id="codePostal" name="codePostal" required>
             </div>
-            <div class="divInfo">
+            <div class="divInfo" id="divVille">
                 <label for="ville">Ville</label>
                 <input type="text" id="ville" name="ville" required>                
             </div>
@@ -95,11 +95,11 @@
                 <label for="pays">Pays de naissance</label>
                 <input type="text" id="pays" name="pays" required>                
             </div>
-            <div class="divInfo">
+            <div class="divInfo" id="divSecuriteSocial">
                 <label for="securiteSocial">Numéro de sécurité social</label>
                 <input type="number" id="securiteSocial" name="pays" required>                
             </div>
-            <div class="divInfo">
+            <div class="divInfo" id="divPasseport">
                 <label for="passeport">Numéro du passeport</label>
                 <input type="text" id="passeport" name="passeport" required>                
             </div>
